<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/color_white"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prompt"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/color_middle_text"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/color_big_text"
        android:text="@string/pormat_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="left"/>

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tv_dialog_sure"
        android:text="@string/I_know"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/color_white"
        android:background="@drawable/shape_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>