<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/color_white"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/color_middle_text"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/login_bimu"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_app_text_yes"
        android:textColor="@color/color_white"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_register"
        android:textColor="@color/color_middle_text"
        android:textSize="14sp"/>



</LinearLayout>