<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <include layout="@layout/item_app_title"/>

    <WebView
        android:id="@+id/wv_exercise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></WebView>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divi_line"/>

    <LinearLayout
        android:background="@color/color_low"
        android:id="@+id/ll_exercise"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_exercise_dagou"
                android:layout_width="20dp"
                android:layout_height="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_say"
                android:textSize="12sp"
                android:textColor="@color/color_small_text"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_exercise_look"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/shape_brand_introduce"
            android:textColor="@color/orange"
            android:text="@string/look_brand_introduce"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/tv_exercise_get"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/shape_get_discount"
            android:textColor="@color/color_white"
            android:text="@string/get_discount"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

</LinearLayout>